# pydantic-srlinux

./: REFERENCES_JSON-RPC_SERVER.md  pyproject.toml  yang_map.yml
example/clab/: l3evpn-simplified.clab.yml  l3evpn-tutorial.clab.yml  l3evpn-tutorial.clab.yml.annotations.json
example/evpn/: leaf1.py  leaf2.py  spine.py
example/evpn/json/: leaf1.json  leaf2.json  spine.json
pydantic_srlinux/models/: interfaces.py  network_instance.py  system.py
pydantic_srlinux_orig/models/: acl.py  bfd.py  interfaces.py  network_instance.py  platform.py  qos.py  routing_policy.py  system.py  tunnel.py  tunnel_interfaces.py
schemas/: interfaces_schema.json  network_instance_schema.json  system_schema.json
schemas_orig/: acl_schema.json  bfd_schema.json  interfaces_schema.json  network_instance_schema.json  platform_schema.json  qos_schema.json  routing_policy_schema.json  system_schema.json  tunnel_interfaces_schema.json  tunnel_schema.json
