[project]
name = "pydantic-srlinux"
version = "0.1.0"
description = "Pydantic models for Nokia SR Linux"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.10.6"]

[dependency-groups]
dev = [
    "pydantify>=0.9.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "rich>=13.9.4",
    "ruff>=0.9.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "setuptools (>=82.0.0,<83.0.0)",
]
#demo = ["nornir>=3.5.0", "nornir-rich>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_srlinux"]
